feat: add OTP-secured Power Automate pilot
